deploy: 8680583f358c73e91671d788bfe382b08cabae6f

--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
   <link rel="stylesheet" href="https://clandrones.com/styles.css"/>
 </head>
 <body>
-  <header><a class="homeTitle" href="https://clandrones.com/"><img src="https://clandrones.com/images/clandrones.png"/><span>Clan Drones</span></a></header>
-  <nav class="navigation">
-    <ul>
-    </ul>
-  </nav>
-  <div class="content"><h1>Hello world</h1>
+  <header><a class="homeTitle" href="https://clandrones.com/"><img src="https://clandrones.com/images/clandrones.png"/><span>Clan Drones</span></a>
+    <div class="expansor">&nbsp;</div>
+  </header>
+  <div class="content"><h1>Droneros Dji Nacional</h1>
+<p><img src="/images/header.jpg" alt=""></p>
+<p>Somos un grupo a nivel nacional e internacional donde compartimos nuestros trabajos y/o contenido por hobbie, también nos apoyamos mutuamente con todo tipo de información útil para aprender en conjunto.
+El grupo fue creado con la finalidad de aprender entre todos y crear un ambiente ameno y más interactivo que un grupo de Facebook.</p>
+<blockquote>
+<p>Habemos desde experimentados y novatos.</p>
+</blockquote>
+<p><a target="_blank" href="https://chat.whatsapp.com/JMXhUsVIiK1GX8HhCwvX39">Este es el Link para unirse a la Comunidad de Whatsapp</a></p>
+<p>No solo somos un grupo más…
+Somos una comunidad internacional, con página web oficial e incluso gafete para los miembros.</p>
 </div>
-  <footer>Clan Drones - 2024</footer>
+  <footer>© 2024 Clan Drones</footer>
 </body>
