--- a/miembros/index.html
+++ b/miembros/index.html
@@ -27,11 +27,26 @@
     <div class="expansor">&nbsp;</div>
   </header>
   <div class="container">
-    <div class="content"><h1>Clan Drones - Droneros DJI Internacional</h1>
-<p><img src="/images/header.jpg" alt=""></p>
-<h2>Bienvenido | Welcome</h2>
-<p>Este es el sitio oficial de Clan Drones. Aquí puedes encontrar información acerca de nosotros, quienes somos (miembros oficiales) y donde puedes contactarnos.</p>
-<p>Si llegaste aqui desde un gafete, recuerda que solo los miembros oficiales aparecen listados en la sección de <a target="_blank" href="/miembros">miembros</a></p>
+    <div class="content"><h1>Miembros Oficiales</h1>
+<p>
+<div class="blogList">
+  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/corysback.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Corysback</p>
+      </h3>
+      <p class="excerpt">El miembro fundador de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/corysback"></a>
+  </div>
+  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/zero.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Zero</p>
+      </h3>
+      <p class="excerpt">Carlos Flores o &quot;Zero&quot; desde Querétaro</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/zero"></a>
+  </div>
+</div></p>
 </div>
     <div class="sidebar">
       <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a>
