--- a/acerca-de-nosotros/index.html
+++ b/acerca-de-nosotros/index.html
@@ -27,11 +27,15 @@
     <div class="expansor">&nbsp;</div>
   </header>
   <div class="container">
-    <div class="content"><h1>Clan Drones - Droneros DJI Internacional</h1>
-<p><img src="/images/header.jpg" alt=""></p>
-<h2>Bienvenido | Welcome</h2>
-<p>Este es el sitio oficial de Clan Drones. Aquí puedes encontrar información acerca de nosotros, quienes somos (miembros oficiales) y donde puedes contactarnos.</p>
-<p>Si llegaste aqui desde un gafete, recuerda que solo los miembros oficiales aparecen listados en la sección de <a target="_blank" href="/miembros">miembros</a></p>
+    <div class="content"><h1>Droneros Dji Nacional</h1>
+<p>Somos un grupo a nivel nacional e internacional donde compartimos nuestros trabajos y/o contenido por hobbie, también nos apoyamos mutuamente con todo tipo de información útil para aprender en conjunto.
+El grupo fue creado con la finalidad de aprender entre todos y crear un ambiente ameno y más interactivo que un grupo de Facebook.</p>
+<blockquote>
+<p>Habemos desde experimentados y novatos.</p>
+</blockquote>
+<p><a target="_blank" href="https://chat.whatsapp.com/JMXhUsVIiK1GX8HhCwvX39">Este es el Link para unirse a la Comunidad de Whatsapp</a></p>
+<p>No solo somos un grupo más…
+Somos una comunidad internacional, con página web oficial e incluso gafete para los miembros.</p>
 </div>
     <div class="sidebar">
       <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a>
