deploy: 4ad649e2db9721948fa5e6cb0400f7f785d43e10

--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,14 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/roberto-villalobos.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Roberto Villalobos</p>
+      </h3>
+      <p class="excerpt">Admin del grupo</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/roberto-villalobos"></a>
+  </div>
   <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/corysback.jpg)">
     <div class="blogContent">
       <h3 class="title">
