deploy: b4ae89a90017ac228b5bff64105a4d0641e101e4

--- a/acerca-de-nosotros/index.html
+++ b/acerca-de-nosotros/index.html
@@ -38,7 +38,7 @@ El grupo fue creado con la finalidad de aprender entre todos y crear un ambiente
 Somos una comunidad internacional, con página web oficial e incluso gafete para los miembros.</p>
 </div>
     <div class="sidebar">
-      <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a>
+      <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
     </div>
   </div>
   <footer>© 2024 Clan Drones</footer>
