deploy: 0c53112ad8aee633d0a53c50c47451177b3d5f20

--- a/miembros/index.html
+++ b/miembros/index.html
@@ -51,7 +51,7 @@
       <h3 class="title">
         <p class="postTitle">Corysback</p>
       </h3>
-      <p class="excerpt">El miembro fundador de Clan Drones</p>
+      <p class="excerpt">Fundador de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/corysback"></a>
   </div>
   <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/zero.jpg)">
