--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,14 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/hugo-roberto.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Hugo Roberto</p>
+      </h3>
+      <p class="excerpt">Admin de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/hugo-roberto"></a>
+  </div>
   <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/oscar-camacho.jpeg)">
     <div class="blogContent">
       <h3 class="title">
