--- a/miembros/index.html
+++ b/miembros/index.html
@@ -38,7 +38,7 @@
       <p class="excerpt">Admin de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/hugo-roberto"></a>
   </div>
-  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/oscar-camacho.jpeg)">
+  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/oscar-camacho2.jpg)">
     <div class="blogContent">
       <h3 class="title">
         <p class="postTitle">Oscar Camacho</p>
