--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,7 +30,7 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
-  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/saul-ontiveros.jpg)">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/saul-ontiveros.jpg)">
     <div class="blogContent">
       <h3 class="title">
         <p class="postTitle">Saúl</p>
@@ -38,50 +38,50 @@
       <p class="excerpt">Miembro de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/saul-ontiveros"></a>
   </div>
-  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/hugo-roberto.jpg)">
-    <div class="blogContent">
+  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/hugo-roberto.jpg)">
+    <div class="blogContent admin">
       <h3 class="title">
         <p class="postTitle">Hugo Roberto</p>
       </h3>
       <p class="excerpt">Admin de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/hugo-roberto"></a>
   </div>
-  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/oscar-camacho2.jpg)">
-    <div class="blogContent">
+  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/oscar-camacho2.jpg)">
+    <div class="blogContent admin">
       <h3 class="title">
         <p class="postTitle">Oscar Camacho</p>
       </h3>
       <p class="excerpt">Admin de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/oscar-camacho"></a>
   </div>
-  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/roberto-villalobos2.jpg)">
-    <div class="blogContent">
+  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/roberto-villalobos2.jpg)">
+    <div class="blogContent admin">
       <h3 class="title">
         <p class="postTitle">Roberto Villalobos</p>
       </h3>
       <p class="excerpt">Admin del grupo</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/roberto-villalobos"></a>
   </div>
-  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/fundador-cory.jpg)">
-    <div class="blogContent">
+  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/fundador-cory.jpg)">
+    <div class="blogContent admin">
       <h3 class="title">
         <p class="postTitle">Corysback</p>
       </h3>
       <p class="excerpt">Fundador de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/corysback"></a>
   </div>
-  <div class="card miembro premium" style="background-image: url(https://clandrones.com/content/images/zero.jpg)">
-    <div class="blogContent">
+  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/zero.jpg)">
+    <div class="blogContent admin">
       <h3 class="title">
         <p class="postTitle">Zero</p>
       </h3>
-      <p class="excerpt">Carlos Flores o &quot;Zero&quot; desde Querétaro</p>
+      <p class="excerpt">Admin del sitio</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/zero"></a>
   </div>
 </div></p>
 </div>
     <div class="sidebar">
-      <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
+      <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/entradas"><span>Entradas</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
     </div>
   </div>
   <footer>© 2024 Clan Drones</footer>
