--- a/entradas/index.html
+++ b/entradas/index.html
@@ -27,7 +27,7 @@
     <div class="expansor">&nbsp;</div>
   </header>
   <div class="container">
-    <div class="content"><h1>Miembros Oficiales</h1>
+    <div class="content"><h1>Entradas del Clan Drones</h1>
 <p>
 <div class="blogList">
   <div class="card entrada" style="background-image: url(https://clandrones.com/images/header.jpg)">
