deploy: 0e7ef3ab85880752a2fd3ef610a3b7459330f175

--- a/entradas/index.html
+++ b/entradas/index.html
@@ -38,6 +38,14 @@
       <p class="excerpt">Este es mi primer post</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/Bienvenidos"></a>
   </div>
+  <div class="card entrada" style="background-image: url(https://clandrones.com/images/clan-drones.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Somos Clan Drones Internacional</p>
+      </h3>
+      <p class="excerpt">No solo somos un sitio mas de droneros como cualquier otro.</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/clan-drones"></a>
+  </div>
 </div></p>
 </div>
     <div class="sidebar">
