--- a/miembros/index.html
+++ b/miembros/index.html
@@ -70,7 +70,7 @@
       <p class="excerpt">Fundador de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/corysback"></a>
   </div>
-  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/zero.jpg)">
+  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/zero-dragon.jpg)">
     <div class="blogContent admin">
       <h3 class="title">
         <p class="postTitle">Zero</p>
