--- a/entradas/index.html
+++ b/entradas/index.html
@@ -38,7 +38,7 @@
       <p class="excerpt">Este es mi primer post</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/Bienvenidos"></a>
   </div>
-  <div class="card entrada" style="background-image: url(https://clandrones.com/images/clan-drones.jpg)">
+  <div class="card entrada" style="background-image: url(https://clandrones.com/content/images/clan-drones.jpg)">
     <div class="blogContent">
       <h3 class="title">
         <p class="postTitle">Somos Clan Drones Internacional</p>
