--- a/miembros/index.html
+++ b/miembros/index.html
@@ -7,13 +7,13 @@
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Clan Drones"/>
   <meta property="og:description" content="Somos un grupo de entuciastas de los drones con la finalidad de compartir conocimientos y experiencias."/>
-  <meta property="og:image" content="https://clandrones.com/images/header.jpg"/>
+  <meta property="og:image" content="https://clandrones.com/images/clan-drones.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta property="twitter:domain" content="https://clandrones.com"/>
   <meta property="twitter:url" content="https://clandrones.com"/>
   <meta name="twitter:title" content="Clan Drones"/>
   <meta name="twitter:description" content="Somos un grupo de entuciastas de los drones con la finalidad de compartir conocimientos y experiencias."/>
-  <meta name="twitter:image" content="https://clandrones.com/images/header.jpg"/>
+  <meta name="twitter:image" content="https://clandrones.com/images/clan-drones.jpg"/>
   <link rel="apple-touch-icon" sizes="180x180" href="https://clandrones.com/apple-touch-icon.png"/>
   <link rel="icon" type="image/png" sizes="32x32" href="https://clandrones.com/favicon-32x32.png"/>
   <link rel="icon" type="image/png" sizes="16x16" href="https://clandrones.com/favicon-16x16.png"/>
@@ -46,7 +46,7 @@
       <p class="excerpt">Admin de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/hugo-roberto"></a>
   </div>
-  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/oscar-camacho2.jpg)">
+  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/oscar-camacho.jpg)">
     <div class="blogContent admin">
       <h3 class="title">
         <p class="postTitle">Oscar Camacho</p>
@@ -54,7 +54,7 @@
       <p class="excerpt">Admin de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/oscar-camacho"></a>
   </div>
-  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/roberto-villalobos2.jpg)">
+  <div class="card miembro admin" style="background-image: url(https://clandrones.com/content/images/roberto-villalobos.jpg)">
     <div class="blogContent admin">
       <h3 class="title">
         <p class="postTitle">Roberto Villalobos</p>
