deploy: 7badcbba2a4356055f35dbf877979b1afcb067a2

--- a/mercancia/index.html
+++ b/mercancia/index.html
@@ -5,13 +5,13 @@
   <meta name="description" content="Somos un grupo de entuciastas de los drones con la finalidad de compartir conocimientos y experiencias."/>
   <meta property="og:url" content="https://clandrones.com"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:title" content="Somos Clan Drones Internacional - Clan Drones"/>
+  <meta property="og:title" content="Clan Drones"/>
   <meta property="og:description" content="Somos un grupo de entuciastas de los drones con la finalidad de compartir conocimientos y experiencias."/>
   <meta property="og:image" content="https://clandrones.com/images/clan-drones.jpg"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta property="twitter:domain" content="https://clandrones.com"/>
   <meta property="twitter:url" content="https://clandrones.com"/>
-  <meta name="twitter:title" content="Somos Clan Drones Internacional - Clan Drones"/>
+  <meta name="twitter:title" content="Clan Drones"/>
   <meta name="twitter:description" content="Somos un grupo de entuciastas de los drones con la finalidad de compartir conocimientos y experiencias."/>
   <meta name="twitter:image" content="https://clandrones.com/images/clan-drones.jpg"/>
   <link rel="apple-touch-icon" sizes="180x180" href="https://clandrones.com/apple-touch-icon.png"/>
@@ -27,21 +27,12 @@
     <div class="expansor">&nbsp;</div>
   </header>
   <div class="container">
-    <div class="content"><h1>Bienvenidos</h1>
-<p>No solo somos un sitio mas de droneros como cualquier otro, nosotros somos integrantes a nivel internacional
-  compartimos contenido exclusivo de los lugares de origen de cada miembro.<br>  De igual forma contamos con gafetes identificadores como afiliados/miembros
-  activos de la comunidad.  </p>
-<p>Algunos de los integrantes forman parte de la prensa local de sus lugares de residencia, lo que nos hace también un referente
-  importante para dar autenticidad de lo antes mencionado, muchos de los integrantes cuentan con equipos registrados y otros no, por cuestión de la clasificación de sus respectivos drones, claro está que nos referimos a la categoría micro.<br>  Ahora bien depende del uso de cada quien, uso recreatívo o uso laboral, siendo 
-  la segunda mencionada acreedora de un permiso y/o registro. </p>
-<p>  Clan Drones es una comunidad y sitio web donde se indexan también miembros activos y constantes colaboradores del grupo de whatsapp con mas de 800 miembros
-  al rededor del mundo.<br>  Sin embargo, Clan Drones no se hace responsable del uso inadecuado/indebido por pertenecer al mismo.  </p>
-<p><img src="/content/images/clan-drones.jpg" alt="header"></p>
-
-    </div>
+    <div class="content"><h1>Mercancía oficial Clan Drones</h1>
+<p>Sección en construcción</p>
+</div>
     <div class="sidebar">
       <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/entradas"><span>Entradas</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/mercancia"><span>Mercancía</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
     </div>
   </div>
-  <footer>© 2024 Somos Clan Drones Internacional - Clan Drones</footer>
+  <footer>© 2024 Clan Drones</footer>
 </body>
