deploy: f1bcb92a7fb0ed22229a248cae3063f64ebd9a00

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>Si llegaste aqui desde un gafete, recuerda que solo los miembros oficiales aparecen listados en la sección de <a target="_blank" href="/miembros">miembros</a></p>
 </div>
     <div class="sidebar">
-      <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/entradas"><span>Entradas</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/mercancia"><span>Mercancía</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
+      <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/entradas"><span>Entradas</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/mercancia"><span>Mercancía</span></a><a class="item" href="https://clandrones.com/codigo-de-conducta"><span>Código de conducta</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
     </div>
   </div>
   <footer>© 2024 Clan Drones</footer>
