--- a/NOM-107-SCT3-2019/index.html
+++ b/NOM-107-SCT3-2019/index.html
@@ -35,7 +35,7 @@ NORMA Oficial Mexicana NOM-107-SCT3-2019
 Que establece los requerimientos para operar un sistema de aeronave pilotada a distancia (RPAS) en el espacio aéreo mexicano.</p>
 </div>
     <div class="sidebar">
-      <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/entradas"><span>Entradas</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/mercancia"><span>Mercancía</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
+      <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/entradas"><span>Entradas</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/mercancia"><span>Mercancía</span></a><a class="item" href="https://clandrones.com/codigo-de-conducta"><span>Código de conducta</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
     </div>
   </div>
   <footer>© 2024 Clan Drones</footer>
