--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,38 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/carlos-diaz.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Carlos Alberto Díaz</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/carlos-diaz"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/alex-salas.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Alex Salas</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/alex-salas"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/cristian-bravo.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Cristian Bravo</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/cristian-bravo"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/juan-leon.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Juan LEón</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/juan-leon"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/saul-ontiveros.jpg)">
     <div class="blogContent">
       <h3 class="title">
