deploy: 949f4e8e3b55983786bd11f80121ed071f069514

--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,14 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/arturo-buenavad.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Arturo Buenavad Méndez</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/arturo-buenavad"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/carlos-diaz.jpg)">
     <div class="blogContent">
       <h3 class="title">
@@ -37,6 +45,14 @@
       </h3>
       <p class="excerpt">Miembro de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/carlos-diaz"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/limon-marco.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Marco Antonio Limón Burgos</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/limon-marco"></a>
   </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/alex-salas.jpg)">
     <div class="blogContent">
