deploy: 3940b10625ba68401a2af561f37779a1d961b448

--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,54 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/dario-rodriguez.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Darío A. Rodríguez</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/dario-argen"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/fede-avata.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">José O Ávila</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/fede-avata"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/gerardo-locochon.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Luis Gerardo Carrillo Salcedo</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/gera-lokochon"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/julio-alberto.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Julio Alberto Tec Uc</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/julio-alberto"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/leo-martinez.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Leobardo Martínez</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/leo-martinez"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/mario-gongora.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Mario Gongora Orozco</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/mario-gongora"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/arturo-buenavad.jpg)">
     <div class="blogContent">
       <h3 class="title">
