deploy: 8f4aa70b2177ef26d622abe01a7c464216c5e920

--- a/mercancia/index.html
+++ b/mercancia/index.html
@@ -33,6 +33,9 @@
 <p><strong>Unitalla:</strong> Ajustable con broche de velcro  </p>
 <p><strong>Instagram:</strong> <a target="_blank" href="https://instagram.com/elclandrones">El Clan Drones</a></p>
 <p><strong>Sobre Pedido:</strong> Mercancía Oficial Clan Drones</p>
+<h1>Leer Contenido de la imagen</h1>
+<p>Gorras Oficiales</p>
+<p><img src="/images/gorra-clan.jpg" alt="header"></p>
 </div>
     <div class="sidebar">
       <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/entradas"><span>Entradas</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/mercancia"><span>Mercancía</span></a><a class="item" href="https://clandrones.com/codigo-de-conducta"><span>Código de conducta</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
