--- a/mercancia/index.html
+++ b/mercancia/index.html
@@ -35,7 +35,7 @@
 <p><strong>Sobre Pedido:</strong> Mercancía Oficial Clan Drones</p>
 <h1>Leer Contenido de la imagen</h1>
 <p>Gorras Oficiales</p>
-<p><img src="/images/gorra-clan.jpg" alt="header"></p>
+<p><img src="/content/images/gorra-clan.jpg" alt="header"></p>
 </div>
     <div class="sidebar">
       <h2>Secciones</h2><a class="item" href="https://clandrones.com/miembros"><span>Miembros</span></a><a class="item" href="https://clandrones.com/entradas"><span>Entradas</span></a><a class="item" href="https://clandrones.com/acerca-de-nosotros"><span>Acerca de nosotros</span></a><a class="item" href="https://clandrones.com/mercancia"><span>Mercancía</span></a><a class="item" href="https://clandrones.com/codigo-de-conducta"><span>Código de conducta</span></a><a class="item" href="https://clandrones.com/NOM-107-SCT3-2019"><span>NOM 107</span></a>
