deploy: 4356be5794cdeed888971d64a28971e7613b5058

--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,70 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/leobardo-osiel.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Leobardo Osiel López</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/Leobardo-osiel"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/abner-aguilar.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Abner Nehemias Aguilar Tziu</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/abner-aguilar"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/adan-velasco.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Adán Velasco</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/adan-velasco"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/andres-vargas.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Andrés Vargas</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/andres-vargas"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/carlos-spark.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Carlos Rey Garcia Benavides</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/carlos-spark"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/david-cuevas.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">David Cuevas</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/david-cuevas"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/jhonatan-esparza.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Jhonatan esparza Gardea</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/jhonatan-esparza"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/jhonny-adrian.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Jhonny Adrián Cajun Pérez</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/jhonny-adrian"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/dario-rodriguez.jpg)">
     <div class="blogContent">
       <h3 class="title">
