--- a/miembros/index.html
+++ b/miembros/index.html
@@ -94,6 +94,14 @@
       <p class="excerpt">Miembro de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/jhonny-adrian"></a>
   </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/juan-villalobos.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Juan Villalobos</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/juan-villalobos"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/dario-rodriguez.jpg)">
     <div class="blogContent">
       <h3 class="title">
