--- a/miembros/index.html
+++ b/miembros/index.html
@@ -70,6 +70,14 @@
       <p class="excerpt">Miembro de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/carlos-spark"></a>
   </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/daniel-hernandez.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Daniel Hernández Jaimes</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/daniel-hernandez"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/david-cuevas.jpg)">
     <div class="blogContent">
       <h3 class="title">
