--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,14 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/joaquin-enrique.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Joaquín Enrique Pérez González</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/andres-vargas"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/leobardo-osiel.jpg)">
     <div class="blogContent">
       <h3 class="title">
@@ -53,14 +61,6 @@
       </h3>
       <p class="excerpt">Miembro de Clan Drones</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/adan-velasco"></a>
-  </div>
-  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/andres-vargas.jpg)">
-    <div class="blogContent">
-      <h3 class="title">
-        <p class="postTitle">Andrés Vargas</p>
-      </h3>
-      <p class="excerpt">Miembro de Clan Drones</p>
-    </div><a class="megaLink" href="https://clandrones.com/posts/andres-vargas"></a>
   </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/carlos-spark.jpg)">
     <div class="blogContent">
