deploy: 49550cd057262b7ad30486cba227a3d30d7e3be1

--- a/miembros/index.html
+++ b/miembros/index.html
@@ -36,7 +36,7 @@
         <p class="postTitle">Joaquín Enrique Pérez González</p>
       </h3>
       <p class="excerpt">Miembro de Clan Drones</p>
-    </div><a class="megaLink" href="https://clandrones.com/posts/andres-vargas"></a>
+    </div><a class="megaLink" href="https://clandrones.com/posts/joaquin-enrique"></a>
   </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/leobardo-osiel.jpg)">
     <div class="blogContent">
