--- a/entradas/index.html
+++ b/entradas/index.html
@@ -30,6 +30,14 @@
     <div class="content"><h1>Entradas del Clan Drones</h1>
 <p>
 <div class="blogList">
+  <div class="card entrada" style="background-image: url(https://clandrones.com/content/images/djimini4-pro.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Dji Mini 4 Pro</p>
+      </h3>
+      <p class="excerpt">De los Drones mas solicitados del mercado.</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/Mini4-pro"></a>
+  </div>
   <div class="card entrada" style="background-image: url(https://clandrones.com/content/images/clan-drones.jpg)">
     <div class="blogContent">
       <h3 class="title">
