deploy: 1909cc8a6725adc2e482384e0b0d68f58aae1159

--- a/entradas/index.html
+++ b/entradas/index.html
@@ -49,9 +49,9 @@
   <div class="card entrada" style="background-image: url(https://clandrones.com/images/header.jpg)">
     <div class="blogContent">
       <h3 class="title">
-        <p class="postTitle">Bienvenidos</p>
+        <p class="postTitle">Drones Dji, igual a Calidad de Fotos y Video</p>
       </h3>
-      <p class="excerpt">Este es mi primer post</p>
+      <p class="excerpt">Dji Significa Calidad de Foto y Video</p>
     </div><a class="megaLink" href="https://clandrones.com/posts/Bienvenidos"></a>
   </div>
 </div></p>
