deploy: 9c84110a09c16ce3a0522ad68b121f4e43e60804

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
   <div class="container">
     <div class="content"><h1>Clan Drones - Droneros DJI Internacional</h1>
-<p><img src="/images/header.jpg" alt=""></p>
+<p><img src="/images/header.JPG" alt=""></p>
 <h2>Bienvenido | Welcome</h2>
 <p>Este es el sitio oficial de Clan Drones. Aquí puedes encontrar información acerca de nosotros, quienes somos (miembros oficiales) y donde puedes contactarnos.</p>
 <p>Si llegaste aqui desde un gafete, recuerda que solo los miembros oficiales aparecen listados en la sección de <a target="_blank" href="/miembros">miembros</a></p>
