deploy: 2a82f1219c082dbac35471cf7325707b1f0390f8

--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,46 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/abegnamar-toledo.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Abegnamar Toledo Bueno</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/abegnamar-toledo"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/carlos-alberto.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Carlos Alberto Cabrera Pérez</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/carlos-alberto"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/david-avila.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">David Dávila Herrera</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/david-avila"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/edgar-rafael.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Edgar Rafael Murillo Rodríguez</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/edgar-rafael"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/eduardo-ulloa.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Eduardo Ulloa De Loza</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/eduardo-ulloa"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/joaquin-enrique.jpg)">
     <div class="blogContent">
       <h3 class="title">
