--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,22 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/aldo-ernesto.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Aldo Ernesto</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/aldo-ernesto"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/jaime-citalan.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Jaime Citalan De León</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/jaime-citalan"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/abegnamar-toledo.jpg)">
     <div class="blogContent">
       <h3 class="title">
