deploy: 6555d2edab952f626dd4ca1a385ba6f42b584636

--- a/miembros/index.html
+++ b/miembros/index.html
@@ -30,6 +30,22 @@
     <div class="content"><h1>Miembros Oficiales</h1>
 <p>
 <div class="blogList">
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/juan-carlos.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Juan Carlos del Carmen Alejo</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/juan-carlos"></a>
+  </div>
+  <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/karina-gomez.jpg)">
+    <div class="blogContent">
+      <h3 class="title">
+        <p class="postTitle">Karina Gómez Medellín</p>
+      </h3>
+      <p class="excerpt">Miembro de Clan Drones</p>
+    </div><a class="megaLink" href="https://clandrones.com/posts/karina-gomez"></a>
+  </div>
   <div class="card miembro" style="background-image: url(https://clandrones.com/content/images/aldo-ernesto.jpg)">
     <div class="blogContent">
       <h3 class="title">
